<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:background="@drawable/rounded_bottom_corners">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/baseline_white_arrow_back_24"
            android:contentDescription="@string/description_arrow_back"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/profile_title"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/content_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:padding="20dp">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/profile_description_user_icon"
            android:src="@drawable/baseline_circle_user_24"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_txt_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/primary"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_txt_email"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/sky_blue" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_configuration"
        android:layout_below="@id/content_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/updatePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/profile_txt_update_password"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:background="@drawable/focused"
            app:drawableStartCompat="@drawable/baseline_lock_24"
            android:drawablePadding="5dp"/>

        <TextView
            android:id="@+id/terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/profile_txt_terms"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:background="@drawable/focused"
            app:drawableStartCompat="@drawable/baseline_library_books_24"
            android:drawablePadding="5dp"/>

        <TextView
            android:id="@+id/aboutUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/profile_txt_about_us"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:background="@drawable/focused"
            app:drawableStartCompat="@drawable/baseline_info_24"
            android:drawablePadding="5dp"
            />

        <Button
            android:id="@+id/logout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/error"
            android:text="@string/profile_button_logout"
            android:textColor="@color/white"/>
    </LinearLayout>
</RelativeLayout>