<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ForgotActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/baseline_arrow_back_48"
            android:contentDescription="@string/description_arrow_back"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:textColor="@color/error"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_txt_alert"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/sky_blue"
            android:textAlignment="center"/>


        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            ma
            android:layout_height="48dp"
            android:background="@drawable/edittext_style"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:hint="@string/field_email"
            android:autofillHints="emailAddress"
            android:textColorHint="@color/primary"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:drawableStart="@drawable/baseline_email_24"/>

        <Button
            android:id="@+id/next"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/forgot_button_next"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>