<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rectagle_gradient">
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/login_title"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/deco_dog"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.1"
            android:contentDescription="@string/login_description_dog_image" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/login_subtitle"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/sky_blue"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/content_messages"
        android:layout_below="@id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:textSize="18sp"
            android:textColor="@color/error"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/success_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:textSize="18sp"
            android:textColor="@color/success"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/form"
        android:layout_below="@id/content_messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_style"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:hint="@string/field_email"
                android:autofillHints="emailAddress"
                android:textColorHint="@color/primary"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:drawableStart="@drawable/baseline_email_24"/>

            <EditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_style"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:hint="@string/field_password"
                android:autofillHints="password"
                android:textColorHint="@color/primary"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:drawableStart="@drawable/baseline_lock_24"/>

            <LinearLayout
                android:id="@+id/content_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="end">

                <TextView
                    android:id="@+id/forgot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login_txt_forgot_password"
                    android:textColor="@color/primary"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/showPasswordCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:checked="false"
                    android:text="@string/check_password"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:layoutDirection="rtl"
                    android:layout_weight="0" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form"
        android:padding="10dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/log_in"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/login_button_login"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/content_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_txt_account"
            android:layout_marginEnd="5dp"
            android:textSize="19sp"
            android:textColor="@color/primary"
            android:fontFamily="sans-serif-medium" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login_txt_button_sign_up"
            android:textColor="@color/primary"
            android:textSize="19sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
</RelativeLayout>