<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdatePetActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:background="@drawable/rounded_bottom_corners">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/baseline_white_arrow_back_24"
            android:contentDescription="@string/description_arrow_back"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/update_pet_title"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:textSize="19sp"
            android:textColor="@color/error"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/rounded_background"
            android:padding="10dp"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_file_upload_64"
                android:contentDescription="@string/add_pet_description_icon_file_upload"/>

            <TextView
                android:id="@+id/urlImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:text="@string/add_pet_field_image_upload"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_radioButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/addImage"
        android:padding="10dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_yellow"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_pet_field_kind_of_pet"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#C59F27"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"/>

            <RadioGroup
                android:id="@+id/typePet"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <RadioButton
                    android:id="@+id/dog"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="30dp"
                    android:button="@null"
                    android:drawableStart="@drawable/icon_dog"
                    android:contentDescription="@string/add_pet_description_dog_radio"/>

                <RadioButton
                    android:id="@+id/cat"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:button="@null"
                    android:drawableStart="@drawable/icon_cat"
                    android:contentDescription="@string/add_pet_description_cat_radio"/>
            </RadioGroup>
            <TextView
                android:id="@+id/typePetSelected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#C59F27"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/content_radioButtons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:orientation="vertical"
            android:padding="10dp"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/namePet"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_style"
                android:padding="10dp"
                android:hint="@string/add_pet_field_name"
                android:autofillHints="name"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:drawableStart="@drawable/baseline_primary_dog_24" />

            <EditText
                android:id="@+id/raza"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_style"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/add_pet_field_kind_of"
                android:autofillHints="text"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:drawableStart="@drawable/baseline_star_24"/>

            <EditText
                android:id="@+id/peso"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_style"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/add_pet_field_weight"
                android:autofillHints="kilograms"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:drawableStart="@drawable/baseline_scale_24"/>

            <EditText
                android:id="@+id/birthday"
                android:inputType="datetime"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_style"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/add_pet_field_birthday"
                android:autofillHints="date"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:drawableStart="@drawable/baseline_cake_24"
                android:focusable="true"
                android:clickable="true"/>

            <Spinner
                android:id="@+id/sexSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_style"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form"
        android:padding="10dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/save"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/save"
            android:textColor="@color/white"/>
    </LinearLayout>
</RelativeLayout>